kubernetes/traefik/overlays/okd/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dashboard
  namespace: traefik
  labels:
    app: traefik
    app.kubernetes.io/instance: traefik
spec:
  to:
    kind: Service
    name: traefik-dashboard
    weight: 100
  port:
    targetPort: 9000
  wildcardPolicy: None
